--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -1,10 +1,137 @@
 // Partial: Admin
+#management{
 
-.management {
-    min-height: 650px;
+    .management-container{
+        display: block;
+        position: absolute;
+        top: 48px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        overflow: hidden;
+        background-color: $body-management!important;
+
+        @media(min-width: 768px){
+            top: 44px;
+        }
+
+        .management-sidebar{
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            background-color: $dark-primary;
+            width: 250px;
+
+            .map-switcher{
+
+            }
+
+            .nav.nav-list {
+                width: 100%;
+
+                ul{
+                    padding-left: 16px;
+
+
+                    li.active  a{
+                        color: $paper;
+                    }
+
+                    li a{
+                        padding: 10px 0 0 0;
+
+                        &:hover{
+                            background-color: transparent;
+                            color: $paper;
+                        }
+                    }
+                }
+
+                tr {
+                    padding: 10px 0;
+                    cursor: pointer;
+                    display: block;
+                    width: 100%;
+
+                    &:hover{
+                        background-color: rgba(255,255,255,.1);
+                    }
+
+                    &.active {
+                        a {
+                            background: rgba(255,255,255,.1);
+                            color: $paper;
+                        }
+                    }
+
+                    a {
+                        font-weight: 400;
+                        font-size: 1.3rem;
+                        padding: 12px 0;
+                        color: rgba(255,255,255,.6);
+
+                        &:hover{
+                            color: $paper;
+                        }
+                    }
+
+                    i{
+                        color: rgba(255,255,255,.5);
+                        padding: 0 12px;
+                    }
+                }
+            }
+        }
+
+        .management-content{
+            position: absolute;
+            top: 0;
+            left: 250px;
+            bottom: 0;
+            right: 0;
+
+            .page-header{
+                background-color: $dark-secondary;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                height: 50px;
+                margin: 0;
+                color: $paper;
+                line-height: 50px;
+
+                #toggle-sidebar{
+                    cursor: pointer;
+                }
+
+                h1{
+                    display: inline-block;
+                    margin: 0 auto;
+                    width: 100%;
+                    font-size: 16px;
+                    font-weight: 100;
+                }
+            }
+
+            .content{
+                position: absolute;
+                top: 50px;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                overflow-y: auto;
+                padding: 16px;
+                margin-bottom: 16px;
+            }
+        }
+    }
 
     &.slim {
-        .tab-list {
+        vertical-align: top;
+
+        .tab-list, .brand-icon {
             width: 25px;
 
             .full-section {
@@ -13,66 +140,18 @@
                 overflow: hidden;
             }
         }
-        .tab-content {
-            width: calc(100% - 30px);
+        .management-content {
+            left: 50px;
+        }
+
+        .management-sidebar{
+            width: 50px;
         }
     }
-    .tab-list {
-        width: 26%;
-    }
+}
 
-    .tab-content {
-        width: 74%;
-        overflow: hidden;
-
-        > .tab-pane {
-            min-height: 650px;
-        }
-    }
-
-    .nav.nav-list {
-        margin-top: 115px;
-
-        tr {
-            padding: 0;
-
-            &.nav-header {
-                color: darken($well-color, 25%);
-                margin-top: 12px;
-
-                &:first-child {
-                    margin-top: 0;
-                }
-            }
-            &.active {
-                a {
-                    background: $secondary-color;
-                    color: white;
-                }
-            }
-            a {
-                font-weight: 400;
-                padding: 0;
-            }
-        }
-    }
-
-    .page-header {
-        margin: 0 0 30px;
-        height: 75px;
-        border: none;
-        padding: 0;
-
-        h1 {
-            margin: 10px 0 0;
-
-            small {
-                top: -6px;
-                position: relative;
-                left: 10px;
-            }
-        }
-    }
+.management {
+    min-height: 650px;
 
     .alert{
         padding: 15px;
@@ -140,7 +219,7 @@
         }
     }
     .well {
-        .page-header {
+        .well-header {
             margin: 0 0 20px;
             height: auto;
             padding-bottom: 9px;
