--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -32,7 +32,7 @@
         </li>
         <li>
           <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
-             data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+             data-always-enable="{{ last_effective_instance_user|any_resource_is_creatable }}"
              data-disabled-title='{% blocktrans with resources=term.Resources %}Adding {{ resources }} is not available to all users{% endblocktrans %}'
              data-action='addresource'>{% trans "Add a" %} {{ term.Resource }}</a>
         </li>
@@ -142,8 +142,7 @@
         {% if request.instance.supports_resources %}
         <a class="btn btn-primary addBtn"
            data-action='addresource'
-           data-feature="add_plot"
-           data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+           data-always-enable="{{ last_effective_instance_user|any_resource_is_creatable }}"
            data-disabled-title=
              "{% blocktrans with resources=terms.resources %}Adding {{ resources }} is not available to all users {% endblocktrans %}"
            data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
