Remove incorrect permission handling from add dropdown.
The JS is looking for `True`, not `true`.  Since this should always be
enabled though, I just removed the button enabler related attributes.

Connects to #2198

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -20,10 +20,7 @@
 {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
   {% if request.instance.supports_resources %}
     <li class="add-menu dropdown" data-feature="add_plot">
-      <a class="dropdown-toggle" data-toggle="dropdown"
-         data-always-enable="true"
-         data-disabled-title='{% trans "Adding trees is not available to all users" %}'
-         disabled='disabled'>
+      <a class="dropdown-toggle" data-toggle="dropdown">
         <i class="icon-plus-circled"></i>
       </a>
       <ul class="dropdown-menu">
