Fix incorrect usage of permission helper functions
The add tree buttons were using `plot_is_writable` when they should have
been using `plot_is_creatable` (which was not exposed as a template tag).
They were also missing the title text to show when disabled.

There were also several cases where `map_feature_is_writable` or
`map_feature_is_deletable` were being used, but the filters were defined
as `mapfeature_is_writable` and `mapfeature_is_deletable`.  Since nothing
was using the correct filter name, I opted to change the name of the
filter.

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -56,7 +56,7 @@
               {% if last_instance|feature_enabled:'add_plot' and last_effective_instance_user %}
               <li data-feature="add_plot">
                 <a data-class='add-tree'
-                   data-always-enable='{{ last_effective_instance_user|plot_is_writable }}'
+                   data-always-enable='{{ last_effective_instance_user|plot_is_creatable }}'
                    data-disabled-title='{% trans "Adding trees is not available to all users" %}'
                    data-href="{% url 'map' instance_url_name=last_instance.url_name %}?m=addTree"
                    disabled='disabled'>{% trans "Add a Tree" %}</a>
