--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -26,12 +26,14 @@
       <ul class="dropdown-menu">
         <li>
           <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
-             data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+             data-always-enable="{{ last_effective_instance_user|plot_is_creatable }}"
+             data-disabled-title='{% trans "Adding trees is not available to all users" %}'
              data-action='addtree'>{% trans "Add a Tree" %}</a>
         </li>
         <li>
           <a data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addResource"
              data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+             data-disabled-title='{% blocktrans with resources=term.Resources %}Adding {{ resources }} is not available to all users{% endblocktrans %}'
              data-action='addresource'>{% trans "Add a" %} {{ term.Resource }}</a>
         </li>
       </ul>
@@ -39,7 +41,7 @@
   {% else %}
     <li data-feature="add_plot">
       <a data-action='addtree'
-         data-always-enable='{{ last_effective_instance_user|plot_is_writable }}'
+         data-always-enable='{{ last_effective_instance_user|plot_is_creatable }}'
          data-disabled-title='{% trans "Adding trees is not available to all users" %}'
          data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
          disabled='disabled'>{% trans "Add a Tree" %}</a>
@@ -150,7 +152,7 @@
       <a class="btn btn-primary addBtn"
          data-action='addtree'
          data-feature="add_plot"
-         data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+         data-always-enable="{{ last_effective_instance_user|plot_is_creatable }}"
          data-disabled-title="{% trans "Adding trees is not available to all users" %}"
          data-href="{% url 'map' instance_url_name=request.instance.url_name %}?m=addTree"
          disabled="disabled"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
