Enable continue editing link when adding Bioswales
Connects to #2155

--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -18,6 +18,7 @@
                            value="{{ cls.feature_type }}"
                            id="resourceType{{ cls.feature_type }}"
                            data-area-field-name="{{ cls.area_field_name|default_if_none:"" }}"
+                           data-is-editable="{{ cls.is_editable|default_if_none:"False" }}"
                            data-skip-detail-form="{{ cls.skip_detail_form|default:"False" }}"
                     /><label for="resourceType{{ cls.feature_type }}">
                         {{ cls.display_name }}
