Genericize the map page browse mode detail header
I have changed the first header on the sidebar of the browse trees mode
of the map page to "Details" instead of the overly specific "Tree
Details." We are showing the details for green infrastructure features
in this same area.

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -4,7 +4,7 @@
 <div class="panel" id="map-info">
   <div class="panel-group">
     <div class="panel-heading">
-      <a class="panel-toggle collapsed" data-toggle="collapse" data-parent="#map-info" href="#tree-detail">{% trans "Tree Details" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
+      <a class="panel-toggle collapsed" data-toggle="collapse" data-parent="#map-info" href="#tree-detail">{% trans "Details" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
     </div>
     <div id="tree-detail" class="panel-body collapse">
       <div class="panel-body-buttons" id="map-plot-details-button" style="display: none;">
