Further cleanup admin styling

--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
@@ -6,7 +6,7 @@
       <i class="icon-menu" id="toggle-sidebar"></i>
   </div>
   <div class="col-md-6 text-center">
-    <h1>Moderate Comments</h1>
+      <h1>{% trans "Comments" %}</h1>
   </div>
   <div class="col-md-4 text-right">
       <div class="btn-group">
