Make resource add/detail/search more generic
Reduce cases of the hardcoded string 'bioswale' by making filter
processing and udfc searing more generic.

For filter processing, multiple searches per filter take place from a
given code path based on possible models to include, but these models
then validate the entire filter. We were previously whitelisting filters
that had nothing to do with trees so that they wouldn't fail tree
searches, now we catch those parse failures and return an empty filter
for that particular clause.

For udfc searching, rather than keeping one data attribute per model udfc id,
we pass a json mapping of models to ids on one single attribute, which
is processed on the clientside. This enables us to avoid special cases.

For add/detail template processing, it was straightforward to abstract
the common parts.

--- a/opentreemap/treemap/templates/udfc_search.html
+++ b/opentreemap/treemap/templates/udfc_search.html
@@ -22,9 +22,7 @@
       <option data-class="udfc-placeholder" selected />
       {% for udfd_name, udfd_data in udfc.items %}
       <option data-type="{{ udfd_name }}"
-              {% for model_name, model_data in udfd_data.models.items %}
-              data-{{ model_name }}-udfd-id="{{ model_data.udfd.pk }}"
-              {% endfor %}
+              data-udfd-ids="{{ udfd_data.ids|as_json }}"
               data-date-field-key="{{ udfd_data.range_field_key }}"
               data-action-field-key="{{ udfd_data.action_field_key }}"
               >{{ udfd_data.action_verb }}</option>
