Don't show associated trees for a point resource

--- a/opentreemap/treemap/templates/treemap/resource_detail.html
+++ b/opentreemap/treemap/templates/treemap/resource_detail.html
@@ -54,6 +54,7 @@
 {% endif %}
 {% endwith %}
 
+{% if feature.area_field_name %}
 <h3>{% trans "Associated Trees" %}</h3>
 {% with plots=contained_plots %}
 {% if plots %}
@@ -85,6 +86,7 @@
     </div>
 {% endif %}
 {% endwith %}
+{% endif %}
 
 {% endblock subclass_details %}
 
