Rename 'supports_resource' -> 'has_resources'
Determining if an instance has resources is now a poor fit for
determining support for resources because it imposes an inception
problem. An instance must support resources for a resource to be added,
but a resource must be added for an instance to support
resources. Renaming this function will make it semantically clearer to
use other criteria for testing resource support.

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -18,7 +18,7 @@
 
 {% block instancetopnav %}
 {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
-  {% if request.instance.supports_resources %}
+  {% if request.instance.has_resources %}
     <li class="add-menu dropdown" data-feature="add_plot">
       <a class="dropdown-toggle" data-toggle="dropdown">
         <i class="icon-plus-circled"></i>
@@ -139,7 +139,7 @@
     </div>
     <div class="half">
       {% if request.instance|feature_enabled:'add_plot' and last_effective_instance_user %}
-        {% if request.instance.supports_resources %}
+        {% if request.instance.has_resources %}
         <a class="btn btn-primary addBtn"
            data-action='addresource'
            data-always-enable="{{ last_effective_instance_user|any_resource_is_creatable }}"
