--- a/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
@@ -16,7 +16,7 @@
     {% endwith %}
 
     {% with resource_benefits=benefits.resource %}
-      {% if not hide_summary and request.instance.supports_resources and resource_benefits %}
+      {% if not hide_summary and request.instance.has_resources and resource_benefits %}
         <div class="benefit-value-title">{{ term.Resource }} {% trans "Benefits" %}</div>
       {% endif %}
       {% include "treemap/partials/benefit_value_row.html" with benefit=resource_benefits.runoff_reduced icon='tint' %}
@@ -25,7 +25,7 @@
 
     {% if not hide_summary and not hidecounts %}
     <div class="benefit-tree-count">
-      {% with has_resources=request.instance.supports_resources plot_basis=basis.plot resource_basis=basis.resource %}
+      {% with has_resources=request.instance.has_resources plot_basis=basis.plot resource_basis=basis.resource %}
         {% blocktrans with used=plot_basis.n_objects_used total=plot_basis.n_total %}
         Based on {{ used }} out of {{ total }} total trees{% endblocktrans %}{% if not has_resources %}.{% endif %}
         {% if has_resources %}
@@ -44,7 +44,7 @@
   {% localize on %}
   <span id="tree-count">{{ basis.plot.n_total }}</span> {{ tree_count_label }}
   <span id="planting-site-count">{{ basis.plot.n_plots }}</span> {{ plot_count_label }}
-  {% if request.instance.supports_resources and basis.resource %}
+  {% if request.instance.has_resources and basis.resource %}
     {% with resource_count=basis.resource.n_total %}
       <span id="resource-count">{{ resource_count }}</span>
       {% if resource_count == 1 %}
